--- a/myPortfolio/style.css
+++ b/myPortfolio/style.css
@@ -1,10 +1,8 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-image:  url(https://images.unsplash.com/photo-1496864137062-a12b5defe6be?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1500&q=80);
+    background-image:  url(https://images.unsplash.com/photo-1559135467-c3a6d0fba1d0?ixlib=rb-1.2.1&auto=format&fit=crop&w=1575&q=80);
     background-repeat: no-repeat;
-    background-size: 100% 100%;
-    height: 100vh;
-    width: 100vw;
+    background-size: cover;
   }
   
   .logo {
@@ -37,12 +35,13 @@ body {
     background: transparent;
     padding: 20px; 
     text-align: center;
-    border: 2px solid white;
+    border: 2px solid black;
   }
+  a:hover{border-color: white}
   
   .has-border {
     border-radius: 25px;
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid rgb(0,0,0);
     background: none;
     padding: 20px; 
   }
@@ -62,31 +61,34 @@ body {
   }
   
   h1 {
-    color black;
+    color:rgb(0,0,0);
     grid-column: 2/3;
     margin: 3% auto;
-    border-bottom: 2px solid #1940A9;;
+    border-bottom: 2px solid white;
   }
 
   h2 {
     grid-column: 2/3;
     margin: 3% auto;
     font-style: italic;
+    color: black;
   }
   
   button {
     grid-column: 2/3;
-    margin: 3% auto;
-    width: 70%;
-    height: 15%;
+    margin: 4% auto;
+    width: 60%;
+    height: 20%;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: 30px;
     border-radius: 25px;
     background: transparent;
-    padding: 20px; 
-    padding-bottom: 5%;
+    border: 2px solid black;
+    padding: 10px; 
+    padding-bottom: 7.7%;
     text-align: center;
     color: black;
     letter-spacing: 16px;
     font-style: italic;
   }
+button:hover{border:solid white}
