--- a/myPortfolio/style.css
+++ b/myPortfolio/style.css
@@ -27,10 +27,10 @@ body {
   nav > a {
     margin: 2% 1% 3%;
     height: 10%;
-    width: 15%;
+    width: fit-content;
     color: black;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
+    font-size: fit-content;
     border-radius: 25px;
     background: transparent;
     padding: 20px; 
@@ -67,6 +67,7 @@ body {
     border-bottom: 2px solid white;
   }
 
+
   h2 {
     grid-column: 2/3;
     margin: 3% auto;
@@ -77,10 +78,11 @@ body {
   button {
     grid-column: 2/3;
     margin: 4% auto;
-    width: 60%;
+    width: fit-content;
     height: 20%;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+    font-style: bold;
+    font-size: fit-content;
     border-radius: 25px;
     background: transparent;
     border: 2px solid black;
@@ -92,3 +94,24 @@ body {
     font-style: italic;
   }
 button:hover{border:solid white}
+@media(max-width:750px x 1334px) {
+  .logo{align-content: center;}
+  nav > a {grid-column: 1/3;}
+  main {grid-template-columns: 20% 50% 20%;}
+  #profile-pic {width: 175px;
+      height: 175px;
+    }
+  h1 {text-align: center;}
+  h2 {text-align: center;}
+}
+@media(max-width : 1024px)
+{.logo{grid-template-columns: 95%;
+  justify-content: center;}
+nav > a {grid-column: 1/3;}
+main {
+  grid-template-columns: 5% 90% 5%;
+}
+h1 {text-align: center;}
+h2 {text-align: center;}
+button {text-align: center;}
+}
