--- a/myPortfolio/src/resume.css
+++ b/myPortfolio/src/resume.css
@@ -4,13 +4,12 @@ text-align:center;}
 body {
   text-align: center;
     margin-left: 25px;
+    width: 60%;
 }
-p title{
-    font:bold;
+h2{
+    text-decoration: underline;
 }
-p{ margin-top: 100px;
-    margin-bottom: 100px;
-    margin-right: 150px;
-    margin-left: 80px;
+p{margin: 40px;
 text-align: center;
 }
+footer{background-color: lightgray;}
