--- a/myPortfolio/src/dashboard-style.css
+++ b/myPortfolio/src/dashboard-style.css
@@ -124,74 +124,65 @@ Style
 
 
 
-.calculator {
-  margin: 10%;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 300px;
+*{
+  box-sizing: border-box;
 }
-.calculator-screen {
-  width: 50%;
-  font-size: 15px;
-  height: 25px;
-  border: none;
-  background-color: #252525;
+body{
+  min-height: 100vh;
+  display:flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+.container{
+  display:flex;
+  flex-wrap: wrap;
+  flex: 0 1 60%;
+  min-width:400px;
+}
+
+.buttons,.result{
+  display: flex;
+  flex-wrap: wrap;
+  flex: 0 1 100%;
+}
+.result{
+  height: 50px;
+  border: 1px solid black;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 1.5em;
+  background: #000;
+  color:#fff;
+  padding:0 10px;
+}
+.button{
+  display:flex;
+  flex: 0 1 25%;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  border: 1px solid black;
+  border-top:none;
+  border-left:none;
+  cursor: pointer;
+  background: -webkit-linear-gradient(top,#d2d2d2,#ddd);
+  font-size:2em;
+}
+.button:nth-child(4n+1){
+  border-left: 1px solid black;
+}
+.button:nth-child(4n),.button:last-child{
+  background: #f98110;
   color: #fff;
-  text-align: right;
-  padding-right: 20px;
-  padding-left: 10px;
 }
-.calculator-button {
-  height: 60px;
-  background-color: #fff;
-  border-radius: 3px;
-  border: 1px solid #c4c4c4;
-  background-color: transparent;
-  font-size: 2rem;
-  color: #333;
-  background-image: linear-gradient(to bottom,transparent,transparent 50%,rgba(0,0,0,.04));
-  box-shadow: inset 0 0 0 1px rgba(255,255,255,.05), inset 0 1px 0 0 rgba(255,255,255,.45), inset 0 -1px 0 0 rgba(255,255,255,.15), 0 1px 0 0 rgba(255,255,255,.15);
-  text-shadow: 0 1px rgba(255,255,255,.4);
+.zero-btn{
+  flex-grow: 2;
+}
+.doubleBordered{
+  border: 2px solid black;
 }
 
-button:hover {
-  background-color: #eaeaea;
-}
 
-.operator {
-  color: #337cac;
-}
-
-.all-clear {
-  background-color: #f0595f;
-  border-color: #b0353a;
-  color: #fff;
-}
-
-.all-clear:hover {
-  background-color: #f17377;
-}
-
-.equal-sign {
-  background-color: #2e86c0;
-  border-color: #337cac;
-  color: #fff;
-  grid-row-start: 2;
-}
-
-.equal-sign:hover {
-  background-color: #4e9ed4;
-}
-.calculator-keys {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 5px;
-  padding: 20px;
-}
 
 
 
