--- a/myPortfolio/src/dashboard-style.css
+++ b/myPortfolio/src/dashboard-style.css
@@ -38,14 +38,27 @@ html {
     text-align: center;
   }
 }
-}
-body {
 
-  background-image: url(https://images.unsplash.com/photo-1566127444977-e09782d3f691?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=749&q=80);
+}
+#bg{
+  background-size: cover;
+  position: fixed; 
+  top: 0; 
+  left: 0; 
+	
+  /* Preserve aspet ratio */
+  min-width: 100%;
+  min-height: 100%;
+}
+
+body {
   background-repeat: no-repeat;
   background-size: 100%;
 }
 
+h1{
+  font-size: 50px;
+}
 main {
   display: grid;
   grid-template: 50% 50%;
@@ -63,9 +76,8 @@ main {
   background-color: #fff;
   border: 2px solid var(--blue-grey-200);
   border-radius: 8px;
-
 background-image: url(https://images.unsplash.com/photo-1460411794035-42aac080490a?ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80);
-background-size: 160%;
+background-size: cover;
 background-repeat: no-repeat;
 }
 .month-indicator {
@@ -77,7 +89,7 @@ background-repeat: no-repeat;
 .day-of-week,
 .date-grid {
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, 1fr);  
 }
 
 header
@@ -97,8 +109,7 @@ header
 
 .date-grid {
   margin-top: 0.5em;
-  align-content: space-around;
-  justify-content: space-between;
+
 }
 
 
@@ -139,11 +150,11 @@ Style
 }
 
 .container{
-  grid-area: 4/4;
+  grid-area: 6/6;
   display:flex;
   flex-wrap: wrap;
   flex: 0 1 60%;
-  min-width:400px;
+  min-width:50px;
 }
 
 .buttons,.result{
@@ -193,9 +204,11 @@ Style
 
 
 .header{
-  grid-area: 2/2;
+  grid-area: 5/1;
 }
-
+#myUL{
+  grid-area: 6/1;
+}
 ul {
   margin:0;
   padding:0;
