--- a/myPortfolio/src/styles/hair.css
+++ b/myPortfolio/src/styles/hair.css
@@ -14,7 +14,7 @@ header{
 }
 
 body{
-    background-image: url(http://127.0.0.1:5500/src/img/walking.jpg);
+    background-image: url(https://images.unsplash.com/photo-1436262513933-a0b06755c784?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=751&q=80);
     background-size: 100%;
     background-repeat: no-repeat;
     margin: 0%;
