--- a/myPortfolio/src/styles/hair.css
+++ b/myPortfolio/src/styles/hair.css
@@ -81,6 +81,7 @@ img{
         margin: 0 auto;
         width: 98%;
         height: 2300px;
+        background-size: 6000px;
     }
     header {
         font-size: 200px;
