--- a/myPortfolio/src/styles/dashboard-style.css
+++ b/myPortfolio/src/styles/dashboard-style.css
@@ -340,13 +340,9 @@ input {
   h1{
     font-size: 150px;
   }
- .calender{
-
- }
-
- .container{
+.button 2{
   
- }
+}
 
 }
 @media (max-width: 1280px) {
