--- a/myPortfolio/src/styles/dashboard-style.css
+++ b/myPortfolio/src/styles/dashboard-style.css
@@ -304,7 +304,7 @@ input {
 }
 
 
-.addBtn {
+#add {
   padding:2.5px;
   width: 25%;
   background: #d9d9d9;
@@ -316,7 +316,6 @@ input {
   transition: 0.3s;
   border-radius: 20px;
 }
-
 .addBtn:hover {
   background-color: #bbb;
 }
