--- a/myPortfolio/src/styles/bacon.landing.page.css
+++ b/myPortfolio/src/styles/bacon.landing.page.css
@@ -6,7 +6,7 @@ h1{
 body{
     grid-auto-columns: 1fr 1fr 1fr;
     grid-template-areas: 
-    ". 1 ."
+    "1 2 3"
 }
 .container1{
     grid-area: 1;
@@ -21,7 +21,7 @@ body{
     text-decoration: underline;
 }
 .container2{
-    grid-area: 1;
+    grid-area: 2;
     border: 3px solid black;
     background-color: whitesmoke;
     text-align: center;
@@ -30,7 +30,7 @@ body{
   padding: 20px;
 }
 .container3{
-    grid-area: 1;
+    grid-area: 3;
     border: 3px solid black;
     background-color: whitesmoke;
     text-align: center;
