--- a/myPortfolio/src/styles/bacon.landing.page.css
+++ b/myPortfolio/src/styles/bacon.landing.page.css
@@ -1,7 +1,12 @@
+a{
+  float: right;
+  margin: 10px;
+}
 h1{
     text-align: center;
     background-color: lightskyblue;
-    background cover;
+    background: cover;
+    background-size: 100px;
 }
 body{
     grid-template-columns: 1fr 1fr 1fr;
