--- a/myPortfolio/src/styles/bacon.landing.page.css
+++ b/myPortfolio/src/styles/bacon.landing.page.css
@@ -6,7 +6,6 @@ h1{
     text-align: center;
     background-color: lightskyblue;
     background: cover;
-    background-size: 100px;
 }
 body{
     grid-template-columns: 1fr 1fr 1fr;
@@ -44,5 +43,18 @@ body{
     margin: 100px;
   padding: 20px;
 }
+  .iframe-container{
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; 
+    height: 0;
+  }
+  .iframe-container iframe{
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 @media (min-width: 576px) { ... }
 @media (min-width: 992px) { ... }
